# moex-momentum

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  pages.yml
agent_context/: REPORT_024_topn_fan.md  author_quantiles_diff.md  backtest_findings.md  data_sources.md  dohodnost_methodology.md  dohodnost_numbers.md  dohodnost_pipeline_notes.md  formula_comparison.md  iss_isin_delisted_research.md  iss_splits_coverage.md  legacy_prices_diff.md  monthly_coverage.md  plotly_bundle_analysis.md  price_sources_research.md  price_sources_research_intl.md  price_sources_research_platforms.md  price_sources_smoke.md  q017_conclusion.md  q017_reference_provenance.md  q017_splits_audit.md  reference_quartiles.json  reference_quartiles_diff.md
agent_context/dividends/: conflict_patterns.md  disputes_research.md  disputes_research_round2.md  iss_coverage.md  manual_disclosure_sources.md  reference_csv_known_defects.md  reference_diff_report.md  sources_audit.md  ticker_verdicts.md  vtbr_check.md
data/: .gitignore  manifest.json  tickers.json  tickers_manual.json  tickers_unavailable.jsonl
data/dividends/: ABIO.csv  ABRD.csv  AFKS.csv  AFLT.csv  AKRN.csv  ALRS.csv  AMEZ.csv  APRI.csv  AQUA.csv  ARSA.csv  ASSB.csv  ASTR.csv  AVAN.csv  BANE.csv  BANEP.csv  BEGY.csv  BELU.csv  BISV.csv  BISVP.csv  BLNG.csv  BSPB-013D.csv  BSPB.csv  BSPBP.csv  CARM.csv  CBOM.csv  CHKZ.csv  CHMF.csv  CNRU.csv  CNTL.csv  CNTLP.csv  DATA.csv  DELI.csv  DGBZ.csv  DGBZP.csv  DIAS.csv  DIOD.csv  DOMRF.csv  DSKY.csv  DVEC.csv  DZRD.csv  (+234 more)
data/indices/: MCFTRR.csv
data/mages/: 2023-Q4.json  2024-Q1.json  2024-Q2.json  2024-Q3.json  2024-Q4.json  2025-Q1.json  2025-Q2.json  2025-Q3.json  2025-Q4.json  2026-Q1.json  2026-Q2.json  2026-Q3.json
data/prices_iss/: ABBN.csv  ABIO.csv  ABRD.csv  ACKO.csv  AESL.csv  AFKC.csv  AFKS-2007.csv  AFKS.csv  AFLT.csv  AKHA-001D.csv  AKHA.csv  AKRN.csv  ALBK.csv  ALNU.csv  ALRS.csv  AMEZ.csv  APDS.csv  APDSP.csv  APRI.csv  APTK.csv  AQUA.csv  ARGR.csv  ARGRP.csv  ARHE.csv  ARHEP.csv  ARMD-001D.csv  ARMD-002D.csv  ARMD.csv  ARSA-001D.csv  ARSA.csv  ARSB.csv  ARSBP.csv  ASGR.csv  ASRE.csv  ASSB.csv  ASTR.csv  AVAN.csv  AVAZ.csv  AVAZP-2009.csv  AVAZP.csv  (+990 more)
data/splits/: BELU.csv  GEMA.csv  GMKN.csv  IRAO.csv  KOGK.csv  PLZL.csv  ROLO.csv  T.csv  TRNFP.csv  URKZ.csv  VTBR.csv  _suspicious.json
docs/: .gitignore  mages_intro.md  mages_methodology.md  methodology.md
docs/pages/: plotly.min.js
mfd_backfill/: README.md
mfd_backfill/data/: .gitignore  drift_report.md  mfd_ticker_ids.json  moex_isin_map.json
mfd_backfill/research/: external_isin_sources.md  mfd_rate_limits.md  mfd_tickerless.md  nsd_isin_registry.md  (+1 more)
scripts/: README.md  compare_formulas.py  compare_reference_quartiles.py  compute_topn_fan.py  compute_weight_sweep.py  parse_reference_quartiles.py  q017_ref_membership_nav.py  setup.sh
src/: config.py  tickers.py
tasks/: SPEC.md
tests/: test_apply.py  test_atomic.py  test_backtest.py  test_cli.py  test_detect.py  test_dictionary.py  test_dividend_gaps.py  test_dividend_invariants.py  test_dividends_classify.py  test_dividends_fill.py  test_dividends_ignore.py  test_dividends_iss.py  test_indices.py  test_logging.py  test_mages_curve.py  test_momentum.py  test_momentum_examples.py  test_monthly.py  test_pending.py  test_pipeline_incremental.py  test_plotly_charts.py  test_prices.py  test_q1_top15.py  test_significance.py  test_site_builder.py  test_splits.py  test_tickers.py  test_topn_fan.py  test_transitions.py  test_universe.py  test_weighted_q1.py
(+102 files in other folders)
