[project]
name = "moex-momentum"
version = "0.1.0"
description = "Momentum pipeline for Russian equities (MOEX)"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "plotly>=5.22",
    "jinja2>=3.1",
    "markdown-it-py>=3.0",
    "typer>=0.12",
    "beautifulsoup4>=4.12",
    "lxml>=6.1.0",
]

[project.scripts]
momentum = "cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-beautifulsoup4>=4.12",
    "pandas-stubs>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Flat layout: each subdir under src/ ships as its own importable top-level name.
packages = [
    "src/adjustments",
    "src/cli",
    "src/ingest",
    "src/momentum",
    "src/storage",
    "src/viz",
]
[tool.hatch.build.targets.wheel.sources]
"src" = ""
[tool.hatch.build.targets.wheel.force-include]
# Bare top-level modules under src/ that aren't packages.
"src/config.py" = "config.py"
"src/tickers.py" = "tickers.py"
"src/viz/templates" = "viz/templates"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "PL"]
ignore = [
    "PLR0913",  # too many arguments — backtest functions need them
    "PLR2004",  # magic numbers — fine in tests/configs
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "N802", "E501"]
"src/cli/**" = ["B008", "PLC0415"]  # typer requires Option in defaults; lazy imports avoid heavy deps

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["plotly.*", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
